# Agent-driven-Ontology-Repair-and-Evolution

./: .dockerignore  .gitignore  ADORE_pipeline.ipynb  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_OLD.md  pyproject.toml  summary.md
.github/workflows/: ci.yml
examples/: pneumonia_example.py
src/adore/: __init__.py  __main__.py
src/adore/agents/: __init__.py  axiom_weakening.py  base.py  consistency_guard.py  domain_expert.py  hitl.py  linguistic_insight.py  llm_generator.py  meta_knowledge.py
src/adore/cli/: __init__.py  commands.py
src/adore/core/: __init__.py  constants.py  exceptions.py  models.py
src/adore/infrastructure/: __init__.py  config.py  logging.py
src/adore/services/: __init__.py  llm_service.py  ontology_service.py  workflow_service.py
src/adore/utils/: __init__.py
tests/: __init__.py  test_agents.py  test_ontology_service.py  test_workflow.py
