[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adore"
version = "1.0.0"
description = "Agent-Driven Ontology Repair and Evolution: A revolutionary framework for intelligent knowledge base evolution"
authors = [
    { name = "Ruslan Magana", email = "ruslan@example.com" },
    { name = "Marco Monti", email = "marco@example.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
    "ontology",
    "knowledge-graph",
    "llm",
    "multi-agent",
    "reasoning",
    "semantic-web",
    "description-logic",
    "ai",
    "explainable-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "owlready2>=0.46",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ipython>=8.26.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
adore = "adore.__main__:app"

[project.urls]
Homepage = "https://github.com/ruslanmv/Agent-driven-Ontology-Repair-and-Evolution"
Documentation = "https://github.com/ruslanmv/Agent-driven-Ontology-Repair-and-Evolution#readme"
Repository = "https://github.com/ruslanmv/Agent-driven-Ontology-Repair-and-Evolution"
Issues = "https://github.com/ruslanmv/Agent-driven-Ontology-Repair-and-Evolution/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/adore"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "owlready2.*",
    "langgraph.*",
    "langchain.*",
    "langchain_openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src/adore",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
